Added javascript function for UI interation and an event listener for submission.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 
 <body>
   <h2>Word Puzzle</h2>
-  <form id="word-puzzle">
-    <p>Fill in the missing vowels to reveal the hidden phrase.</p>
-    <button type="submit" class="btn btn-success">Click here to reveal puzzle.</button>
-  </form>
+  <p>Fill in the missing vowels to reveal the hidden phrase.</p>
+  <div id="puzzle-gen">
+    <form id="word-puzzle">
+      <button type="submit" class="btn btn-success">Click here to reveal puzzle.</button>
+    </form>
+  </div>
+  <div id="puzzle-results">
+
+  </div>
 </body>
 
 </html>
